Optimised media query

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>ClearBills - Easy and secure way to track and pay your bills</title>
     <link rel="stylesheet" href="https://use.typekit.net/qkj8vid.css">
     <link rel="stylesheet" href="https://use.typekit.net/qkj8vid.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -18,7 +19,7 @@
     <header class="" id="headerNav">
         <div class="navbar container"><!-- Header Wrapper -->
             <div class="logo"><!-- Logo -->
-                <a href="#"><img src="assets/img/clearbills-logo.png" alt="" class="logo1"></a>
+                <a href="#"><img loading="lazy" src="assets/img/clearbills-logo.png" alt="" class="logo1"></a>
             </div><!-- Logo End -->
 
             <a href="#" class="primary_link round_cta">Get Early Access</a>
@@ -40,28 +41,28 @@
             </div>
 
             <div class="banner-img">
-                <img src="assets/img/icon-coverpage-min.png" alt="Pattern Image">
+                <img loading="lazy" src="assets/img/icon-coverpage-min.png" alt="Pattern Image">
             </div>
         </div><!-- Container End-->
     </section><!-- Welcome Banner End-->
 
-    <section class="strategy"><!-- Digital Strategies -->
+    <section class="section"><!-- Biller & App -->
         <div class="container reverse"><!-- Container -->
-            <div class="strategy-text">
+            <div class="section-text">
                 <span class="section-tag-blue">Biller & App Integration</span>
                 <h2>Integration with the billers and apps you are aready using.</h2>
                 <p>With over 10,000 billers (and growing), you can easily pay and track all your bills from one app.</h3>
             </div>
 
             <div class="banner-img">
-                <img class="pattern-1" src="assets/img/mobile-icon1.png" alt="Mobile-icon">
+                <img loading="lazy" class="pattern-1" src="assets/img/mobile-icon1.png" alt="Mobile-icon">
             </div>
         </div><!-- Container End -->
-    </section><!-- Digital Strategies End -->
+    </section><!-- Biller & App End -->
 
-    <section class="strategy"><!-- Builder-in-Residence Program -->
+    <section class="section"><!-- Get Bill -->
         <div class="container"><!-- Container -->
-            <div class="strategy-text">
+            <div class="section-text">
                 <span class="section-tag-red">Get Bill Notifications</span>
                 <h2>Never miss payments. Get upfront cash that fits your cash flow</h2>
 
@@ -69,15 +70,15 @@
             </div>
 
             <div class="banner-img right">
-                <img class="pattern-1" src="assets/img/mobile-icon2.png" alt="Pattern Image">
+                <img loading="lazy" class="pattern-1" src="assets/img/mobile-icon2.png" alt="Pattern Image">
                 
             </div>
         </div><!-- Container End -->
-    </section><!-- Builder-in-Residence Program End -->
+    </section><!-- Get Bill End -->
 
-    <section class="strategy"><!-- Builder-in-Residence Program -->
+    <section class="section"><!-- Share With Friends -->
         <div class="container reverse"><!-- Container -->
-            <div class="strategy-text">
+            <div class="section-text">
                 <span class="section-tag-purple">Share With Friends</span>
                 <h2>Split and share payments with friends and family</h2>
 
@@ -85,10 +86,10 @@
             </div>
 
             <div class="banner-img">
-                <img class="pattern-1" src="assets/img/mobile-icon3.png"alt="Mobile markup">
+                <img loading="lazy" class="pattern-1" src="assets/img/mobile-icon3.png"alt="Mobile markup">
             </div>
         </div><!-- Container End -->
-    </section><!-- Builder-in-Residence Program End -->
+    </section><!-- Share With Friends End -->
 
     <section class="newsletter sec-padding"><!-- Newsletter -->
         <div class="container"><!-- Container -->
@@ -96,8 +97,8 @@
                 <div class="form">
                     <h2>Manage all your bills and due dates in one place on any device soon</h2>
                     <div class="app-store">
-                        <img src="assets/img/adriod-store.png" alt="Andriod Store">
-                        <img src="assets/img/ios-store.png" alt="IOS Store">
+                        <img loading="lazy" src="assets/img/adriod-store.png" alt="Andriod Store">
+                        <img loading="lazy" src="assets/img/ios-store.png" alt="IOS Store">
                     </div>
                     <p>Sign Up to our Newsletter</p>
                     <form action="">
@@ -114,7 +115,7 @@
             <h2>Clear bills management helps thousands of people break free from the bill burden</h2>
             <div class="list"><!-- List -->
                 <div class="meta">
-                    <img src="assets/img/55.jpg" alt="">
+                    <img loading="lazy" src="assets/img/55.jpg" alt="">
                     <h3>Josh Nickleman</h3>
                     <p>“But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the.”</p>
                 </div>
@@ -127,19 +128,19 @@
             <h2>Find and pay any biller for any offline and online bills</h2>
             <div class="logo">
                 <div>
-                    <img src="assets/img/ekdc.png" alt="Eko Electricity Distribution Company Logo">
+                    <img loading="lazy" src="assets/img/ekdc.png" alt="Eko Electricity Distribution Company Logo">
                 </div>
                 <div>
-                    <img src="assets/img/applemusic@2x.png" alt="Apple Music Logo">
+                    <img loading="lazy" src="assets/img/applemusic@2x.png" alt="Apple Music Logo">
                 </div>
                 <div>
-                    <img src="assets/img/netflix.png" alt="Netflix Logo">
+                    <img loading="lazy" src="assets/img/netflix.png" alt="Netflix Logo">
                 </div>
                 <div>
-                    <img src="assets/img/dstv-logo-vector@2x.png" alt="DSTV Logo">
+                    <img loading="lazy" src="assets/img/dstv-logo-vector@2x.png" alt="DSTV Logo">
                 </div>
                 <div>
-                    <img src="assets/img/FiberOne-Logo-main@2x.png" alt="FiberOne Logo">
+                    <img loading="lazy" src="assets/img/FiberOne-Logo-main@2x.png" alt="FiberOne Logo">
                 </div>
             </div>
         </div><!-- Container End -->
@@ -150,19 +151,19 @@
             <h2 class="text-center">Get early access</h2>
             <div class="wrapper"><!-- Wrapper -->
                 <div class="early-access-text">
-                    <img src="assets/img/member-icon.svg" alt="">
+                    <img loading="lazy" src="assets/img/member-icon.svg" alt="">
                     <h3>Individuals</h3>
                     <p>There’s never a better time to partake in real estate investing. Roof connects individuals with a well-diversified portfolio of short to long term income generating projects for sponsorship</p>
                     <a href="">Get early access</a>
                 </div>
                 <div class="early-access-text">
-                    <img src="assets/img/bag-icon.svg" alt="">
+                    <img loading="lazy" src="assets/img/bag-icon.svg" alt="">
                     <h3>For Business</h3>
                     <p>Say goodbye to undervalued distress property sales. Roof offers you an easy and quicker way to access private capital to acquire, renovate and operate income properties.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="early-access-text">
-                    <img src="assets/img/tag-icon.svg" alt="">
+                    <img loading="lazy" src="assets/img/tag-icon.svg" alt="">
                     <h3>Billers</h3>
                     <p>announce Initial Property Listing™ and close months of transaction in hours. Access private capital from individual or group buyers to finance ongoing and new development projects.</p>
                     <a href="">Learn more</a>
@@ -174,7 +175,7 @@
 
     <footer>
         <div class="container">
-            <img class="logo" src="assets/img/clearbills-logo.png" alt="">
+            <img loading="lazy" class="logo" src="assets/img/clearbills-logo.png" alt="">
             <div class="footer-link">
                 <a href="#" class="primary_link">Privacy</a>
                 <a href="#" class="primary_link">Terms</a>
