Added styling for 100vh

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="ClearBills">
     <title>ClearBills - Easy and secure way to track and pay your bills</title>
+    <link rel="icon" type="image/jpg" href="assets/img/clearbills-icon.jpg">
     <link rel="stylesheet" href="https://use.typekit.net/qkj8vid.css">
     <link rel="stylesheet" href="https://use.typekit.net/qkj8vid.css">
     <link rel="stylesheet" href="assets/css/fonts.css">
@@ -41,12 +42,12 @@
             </div>
 
             <div class="banner-img">
-                <img loading="lazy" src="assets/img/icon-coverpage-min.png" alt="Pattern Image">
+                <img loading="lazy" src="assets/img/MOCKUP-CLEARBILLS.svg" alt="Pattern Image">
             </div>
         </div><!-- Container End-->
     </section><!-- Welcome Banner End-->
 
-    <section class="section"><!-- Biller & App -->
+    <section class="section vp-100"><!-- Biller & App -->
         <div class="container reverse"><!-- Container -->
             <div class="section-text">
                 <span class="section-tag-blue">Biller & App Integration</span>
@@ -56,11 +57,12 @@
 
             <div class="banner-img">
                 <img loading="lazy" class="pattern-1" src="assets/img/mobile-icon1.png" alt="Mobile-icon">
+                <img loading="lazy" class="app-icons" src="assets/img/app-icons.svg" alt="Pattern Image">
             </div>
         </div><!-- Container End -->
     </section><!-- Biller & App End -->
 
-    <section class="section"><!-- Get Bill -->
+    <section class="section vp-100"><!-- Get Bill -->
         <div class="container"><!-- Container -->
             <div class="section-text">
                 <span class="section-tag-red">Get Bill Notifications</span>
@@ -76,7 +78,7 @@
         </div><!-- Container End -->
     </section><!-- Get Bill End -->
 
-    <section class="section"><!-- Share With Friends -->
+    <section class="section vp-100"><!-- Share With Friends -->
         <div class="container reverse"><!-- Container -->
             <div class="section-text">
                 <span class="section-tag-purple">Share With Friends</span>
@@ -176,12 +178,12 @@
     <footer>
         <div class="container">
             <img loading="lazy" class="logo" src="assets/img/clearbills-logo.png" alt="">
-            <div class="footer-link">
+            <!-- <div class="footer-link">
                 <a href="#" class="primary_link">Privacy</a>
                 <a href="#" class="primary_link">Terms</a>
                 <a href="#" class="primary_link">About</a>
                 <a href="#" class="primary_link">Getting Started</a>
-            </div>
+            </div> -->
             <div class="copyright"> &copy;Copyright 2021. All rights reserved by Roof Inc </div>
         </div>
         
