Adjusted Newsletter viewport

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div><!-- Container End -->
     </section><!-- Testimony End -->
 
-    <section class="recognized sec-padding"><!-- Recognized -->
+    <section class="recognized sec-padding vh-100"><!-- Recognized -->
         <div class="container"><!-- Container -->
             <h2>Find and pay any biller for any offline and online bills</h2>
             <div class="logo">
