--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
                 <h1>Easy and secure way to track and pay your bills</h1>
                 <p>A free online payments to keep track and pay your offline and online bills</p>
                 <div class="form">
-                    <form action="">
-                        <input type="email">
-                        <button type="submit">&#8594;</button>
+                    <form action="https://ceedcap.us3.list-manage.com/subscribe/post?u=61544c63ce56eb3602b1adb49&amp;id=a587ebc27d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address">
+                            
+                            <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">&#8594;</button>
+                        </div>
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                     </form>
                 </div>
             </div>
